# docs/swagger.yaml
@@ -768,35 +768,28 @@ paths:
       - Stocks
   /price-action/{symbol}:
     get:
-      description: Retrieves the full list of price action data for a specific stock
-        symbol.
       parameters:
-      - description: Stock Symbol
+      - description: Symbol
         in: path
         name: symbol
         required: true
         type: string
-      produces:
-      - application/json
       responses:
         "200":
           description: OK
           schema:
             $ref: '#/definitions/model.Response'
-      summary: Get Price Action by Symbol
+      summary: Get PA by Symbol
       tags:
       - PriceAction
   /price-action/automate:
     post:
-      description: Triggers scanners to automatically find and save Order Blocks.
-      produces:
-      - application/json
       responses:
-        "200":
-          description: OK
+        "202":
+          description: Accepted
           schema:
             $ref: '#/definitions/model.Response'
-      summary: Automate Order Block Discovery
+      summary: Trigger PA Automation
       tags:
       - PriceAction
   /price-action/fvg:
@@ -813,12 +806,12 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/model.Response'
-      summary: Delete Fair Value Gap
+      security:
+      - BearerAuth: []
+      summary: Delete FVG
       tags:
-      - FVG
+      - PriceAction (Admin)
     patch:
-      consumes:
-      - application/json
       parameters:
       - description: Update Details
         in: body
@@ -831,12 +824,12 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/model.Response'
-      summary: Update Fair Value Gap
+      security:
+      - BearerAuth: []
+      summary: Update FVG
       tags:
-      - FVG
+      - PriceAction (Admin)
     post:
-      consumes:
-      - application/json
       parameters:
       - description: FVG Details
         in: body
@@ -849,29 +842,17 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/model.Response'
-      summary: Save Fair Value Gap
+      security:
+      - BearerAuth: []
+      summary: Save FVG
       tags:
-      - FVG
-  /price-action/fvg/check:
-    post:
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/model.Response'
-      summary: Check Fvg Mitigations
-      tags:
-      - FVG
+      - PriceAction (Admin)
   /price-action/fvg/mitigation:
     get:
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/model.Response'
-      summary: Get Cached Fvg Mitigations
+      responses: {}
+      summary: Get Cached FVG Mitigations
       tags:
-      - FVG
+      - PriceAction
   /price-action/ob:
     delete:
       parameters:
@@ -888,12 +869,10 @@ paths:
             $ref: '#/definitions/model.Response'
       security:
       - BearerAuth: []
-      summary: Delete an Order Block
+      summary: Delete OB
       tags:
-      - PriceAction
+      - PriceAction (Admin)
     patch:
-      consumes:
-      - application/json
       parameters:
       - description: Update Details
         in: body
@@ -908,14 +887,12 @@ paths:
             $ref: '#/definitions/model.Response'
       security:
       - BearerAuth: []
-      summary: Update an Order Block
+      summary: Update OB
       tags:
-      - PriceAction
+      - PriceAction (Admin)
     post:
-      consumes:
-      - application/json
       parameters:
-      - description: Order Block Details
+      - description: OB Details
         in: body
         name: request
         required: true
@@ -928,26 +905,12 @@ paths:
             $ref: '#/definitions/model.Response'
       security:
       - BearerAuth: []
-      summary: Save an Order Block
+      summary: Save OB
       tags:
-      - PriceAction
-  /price-action/ob/check:
-    post:
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/model.Response'
-      summary: Check OB Mitigations
-      tags:
-      - PriceAction
+      - PriceAction (Admin)
   /price-action/ob/mitigation:
     get:
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/model.Response'
+      responses: {}
       summary: Get Cached OB Mitigations
       tags:
       - PriceAction
